# tadv-demo

./: .env.example  .gitignore  README.md  pyproject.toml  start.sh
benchmarks/DVBench/: README.md  error_labels.json
benchmarks/DVBench/IPL_win_prediction/: IPL_match_wih_prediction.py
benchmarks/optimization_runs/run_20260109_012552/: baseline_test_1_cross_new_data_20260110_181328.json  baseline_test_2_new_script_train_data_20260110_174504.json  baseline_test_3_new_script_new_data_20260110_175941.json  final_program.json  round_1.json  (+7 more)
frontend/: .env  .gitignore  .npmrc  README.md  REPRODUCIBILITY.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: main.tsx
tests/: test_api_app.py  test_api_constraints.py  test_api_files.py  test_api_schemas.py  test_generation_adapters.py  test_generation_assumption_extractor.py  test_generation_column_access.py  test_generation_constraint_generator.py  test_generation_data_flow_detector.py  test_generation_flow_graph_builder.py  test_generation_orchestrator.py  test_import.py  test_ir_code.py  test_llm_factory.py  test_profiling_builtin_csv.py  test_profiling_deequ_profiler.py  test_profiling_duckdb_profiler.py  test_profiling_pandas_profiler.py  test_validation_batch_deequ.py  test_validation_deequ_ir_adapter.py  test_validation_deequ_validator.py  test_validation_gx_validator.py  test_validation_models.py
tests/integration/: __init__.py  test_api_e2e.py  test_orchestrator_real_llm.py
tests/resources/: README.md  analytics_task.py  batch_processing_task.py  ml_task.py  sample_bookings.csv
(+37657 files in other folders)
